# fbaas-rust

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
.github/workflows/: branch-deploy-cleanup.yml  branch-deploy.yml  deploy.yml  production-deploy.yml
src/: main.rs
