[package]
name = "fbaas-rust"
version = "0.1.0"
authors = ["Chad McElligott <chad@chadxz.dev>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
http = "*"
serde_json = "*"
tokio = "*"
aws_lambda_events = "0.4.0"
log = "*"

[dependencies.simple_logger]
version = "1.11.0"
default-features = false